[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menus/options.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default.tres" type="Theme" id=2]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 488.0
margin_right = 791.0
margin_bottom = 720.0
alignment = 1

[node name="DisplayFPS" type="CheckButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 303.0
margin_bottom = 334.0
pressed = true
text = "Display FPS"

[node name="DisplayPosition" type="CheckButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 303.0
margin_bottom = 384.0
pressed = true
text = "Display Position"

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 303.0
margin_bottom = 432.0
text = "Exit"

[connection signal="toggled" from="HBoxContainer/VBoxContainer/DisplayFPS" to="." method="_on_DisplayFPS_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/DisplayPosition" to="." method="_on_DisplayPosition_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
